# Meta_Matrix

./: CMakeLists.txt  README.md  main.cpp
include/: Circuliar.hpp  array2d.hpp  function_compose.hpp  graph.hpp  matrix_initialised.hpp  matrix_mult.hpp  wave_equation.hpp
